--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,18 +2,25 @@
   "version": "0.2.0",
   "compounds": [
     {
-      "name": "Run Weather App",
+      "name": "Run Weather App (both)",
       "configurations": [".NET Backend", "React Frontend"]
+    },
+    {
+      "name": "Run Weather App (backend only)",
+      "configurations": [".NET Backend"]
     }
   ],
   "configurations": [
-
+    
     {
       "name": ".NET Backend",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build-server",
-      "program": "${workspaceFolder}/server/bin/Debug/net6.0/server.dll",
+      "program": "${workspaceFolder}/server/bin/Debug/net9.0/WeatherApi.dll",
+      "env": {
+        "ASPNETCORE_URLS": "http://localhost:5001"
+      },
       "args": [],
       "cwd": "${workspaceFolder}/server",
       "serverReadyAction": {
